# autobatcher

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/autobatcher/: __init__.py  __main__.py  client.py  serve.py
python/tests/: test_cli.py  test_lifecycle.py  test_poll_batches.py  test_submit_batch.py
src/autobatcher/: __init__.py  __main__.py  client.py  serve.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_enqueue.py  test_fetch_partial_results.py  test_lifecycle.py  test_poll_batches.py  test_responses.py  test_serve.py  test_subclass.py  test_submit_batch.py  test_with_raw_response.py
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsdown.config.ts  tsup.config.ts
typescript/src/: cli.ts  client.ts  index.ts  serve.ts
