[project]
name = "autobatcher"
version = "0.5.0"
description = "Drop-in AsyncOpenAI replacement that transparently batches requests using the batch API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Doubleword AI", email = "hello@doubleword.ai" }
]
keywords = ["openai", "batch", "llm", "async", "api", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=2.0.0,<3",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
serve = ["aiohttp>=3.9.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-aiohttp>=1.0"]

[project.scripts]
autobatcher = "autobatcher.__main__:main"

[project.urls]
Homepage = "https://github.com/doublewordai/autobatcher"
Repository = "https://github.com/doublewordai/autobatcher"
Issues = "https://github.com/doublewordai/autobatcher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobatcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.src]
# Exclude tests (mock-heavy false positives) and serve module (optional aiohttp dep).
exclude = ["tests/", "src/autobatcher/serve.py", "src/autobatcher/__main__.py"]

[tool.ty.environment]
python-version = "3.12"
